--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
                 <h1>GitHub</h1>
                 <p>You can view my coding projects on my GitHub profile here:
                     <br>
-                    <p class="center"><a href="https://github.com/the-tech-academy" target="_blank">The Tech Academy Github</a></p>
+                    <p class="center"><a href="https://github.com/JeffreyRod" target="_blank">Github portfolio.</a></p>
                 </p>
             </div>
             <!-- Right column -->
             <div class="Column_2">
-                <a href="https://github.com/the-tech-academy" target="_blank"><img src="images/GitHub.png"></a>
+                <a href="https://github.com/JeffreyRod" target="_blank"><img src="images/GitHub.png"></a>
             </div>
         </div>
 
