--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     <br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, and more. 
                     <br>
                     <br>I am a front end developer and would love to work with you on your project. <a onclick="openForm()">Contact</a> me below!
+                    <br>You can also find me/reach me on my <a href="https://www.linkedin.com/feed/"target="_blank"> linked in page</a>.
                 </p>
             </div>
         </div>
